2011-06-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c, gputils/block.c:
    fixed: COD_DIR_ADDRSIZE is byte
  * gputils/dump.c, gputils/gpvc.c, gputils/gpvc.h.in:
    removed directory_block_data, replaced by main_dir.dir.block
  * gputils/dump.c, libgputils/gpcod.h:
    dump_line_symbols() - access by offsets instead by struct members
  * gpasm/cod.c, gplink/cod.c, gputils/block.c, gputils/dump.c,
    gputils/gpvc.c, gputils/gpvc.h.in:
    main_dir is a pointer to DirBlockInfo

2011-06-10  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx, configure.ac, configure: version changed to 0.14.2

2012-05-08  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpcofflink.c, libgputils/gpmessage.c:
    fixed bug #3153394: PIC18 - relative branch - revision v595:
    added warning for odd target address to the linker

2012-05-25  Borut Razem  <borutr@users.sourceforge.net>
  * doc/Makefile.am, doc/Makefile.in:
    force copying gputils.lyx if out-of-source-tee

2012-05-24  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c:
    really fixed bug #3529152 - idata db doesn't generate object code in .lst file
  * doc/Makefile.am, doc/Makefile.in:
    fixed bug #3529377 - Out-of-source-tree make dist fails

2012-05-23  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/gplink.c: fixed typo
  * gpasm/lst.c:
    fixed bug #3529152 - idata db doesn't generate object code in .lst file
  * gpasm/testsuite/gpasm.project/hexfiles/*.hex:
    set svn:eol-style to native

2012-05-22  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    fixed bug #3528790 - misleading warn of gplink

2012-05-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c: ixed bug #3528221 -
    gpasm generates the pagesel code for one page devices,
    generate relocation code for movlp instruction
  * gpasm/testsuite/gpasm.project/objasm/op14e.asm,